--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "next start"
   },
   "dependencies": {
+    "@zeit/next-sass": "^1.0.1",
     "next": "9.5.5",
+    "node-sass": "^4.14.1",
     "react": "16.14.0",
     "react-dom": "16.14.0"
   }
