--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
     "@zeit/next-sass": "^1.0.1",
+    "formik": "^2.2.0",
+    "formik-material-ui": "^3.0.0",
     "js-cookie": "^2.2.1",
     "next": "9.5.5",
     "node-sass": "^4.14.1",
