--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
     "@zeit/next-sass": "^1.0.1",
+    "bcryptjs": "^2.4.3",
+    "express": "^4.17.1",
     "formik": "^2.2.0",
     "formik-material-ui": "^3.0.0",
     "js-cookie": "^2.2.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.10.9",
     "next": "9.5.5",
     "node-sass": "^4.14.1",
     "react": "16.14.0",
@@ -22,7 +26,7 @@
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
-    "redux-persist": "^6.0.0",
+    "redux-persist": "5.10.0",
     "redux-thunk": "^2.3.0"
   }
 }
