--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
     "@zeit/next-sass": "^1.0.1",
+    "axios": "^0.20.0",
     "bcryptjs": "^2.4.3",
-    "express": "^4.17.1",
     "formik": "^2.2.0",
     "formik-material-ui": "^3.0.0",
+    "gravatar": "^1.8.1",
     "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.9",
