--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.9",
+    "mongoose-slug-generator": "^1.0.4",
     "next": "9.5.5",
+    "next-connect": "^0.9.0",
     "node-sass": "^4.14.1",
     "react": "16.14.0",
     "react-dom": "16.14.0",
