--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@zeit/next-sass": "^1.0.1",
     "axios": "^0.20.0",
     "bcryptjs": "^2.4.3",
+    "form-data": "^3.0.0",
     "formik": "^2.2.0",
     "formik-material-ui": "^3.0.0",
     "gravatar": "^1.8.1",
