Finish post page UI

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "isomorphic-unfetch": "^3.1.0",
     "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
     "mongoose": "^5.10.9",
     "mongoose-slug-generator": "^1.0.4",
     "next": "9.5.5",
@@ -28,10 +29,13 @@
     "node-sass": "^4.14.1",
     "react": "16.14.0",
     "react-dom": "16.14.0",
+    "react-markdown": "^5.0.1",
+    "react-moment": "^1.0.0",
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-persist": "5.10.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "remark-gfm": "^1.0.0"
   }
 }
