--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-persist": "5.10.0",
     "redux-thunk": "^2.3.0",
-    "remark-gfm": "^1.0.0"
+    "remark-gfm": "^1.0.0",
+    "swr": "^0.3.6"
   }
 }
