--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "moment": "^2.29.1",
     "mongoose": "^5.10.9",
     "mongoose-slug-generator": "^1.0.4",
-    "next": "9.5.5",
+    "next": "^10.0.0",
     "next-connect": "^0.9.0",
     "node-sass": "^4.14.1",
     "react": "16.14.0",
